--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
-# mod_rewrite starts here 
-
+# mod_rewrite starts here
 RewriteEngine on
+
+# Rewrite 'home' to 'index.html' (or 'index.php')
+RewriteRule ^home/?$ index.html [L]
+
+# Existing rewrite rule to serve .html files without the .html extension
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
